<resources>
    <string name="app_name">StudyMemo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_recording">recoding</string>
    <string name="title_report">report</string>
    <string name="studysub_text">勉強したモノ</string>
    <string name="date_text">日付</string>
    <string name="time_text">時間</string>
    <string name="title_memo">メモ</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
</resources>
